# lms_project

./: .env.example  .flake8  Dockerfile  README.md  docker-compose.yml  lms_project.json  pyproject.toml
config/: settings.py  urls.py
htmlcov/: class_index.html  function_index.html  index.html  manage_py.html  status.json  z_1dbe8758fe0c516b_0001_initial_py.html  z_1dbe8758fe0c516b_0002_alter_lesson_options_py.html  z_1dbe8758fe0c516b_0003_course_owner_lesson_owner_py.html  z_1dbe8758fe0c516b_0004_subscribe_py.html  z_1dbe8758fe0c516b___init___py.html  z_1ea838694151cac8___init___py.html  z_1ea838694151cac8_asgi_py.html  z_1ea838694151cac8_settings_py.html  z_1ea838694151cac8_urls_py.html  z_1ea838694151cac8_wsgi_py.html  z_809601a66e33f4cc___init___py.html  z_809601a66e33f4cc_csu_py.html  z_9740a1dbee3fded2___init___py.html  z_d7caba16f2a88201_0001_initial_py.html  z_d7caba16f2a88201_0002_payment_py.html  z_d7caba16f2a88201___init___py.html  z_f6c68bdc9becfc1e___init___py.html  z_f6c68bdc9becfc1e_admin_py.html  z_f6c68bdc9becfc1e_apps_py.html  z_f6c68bdc9becfc1e_models_py.html  z_f6c68bdc9becfc1e_permissions_py.html  z_f6c68bdc9becfc1e_serializers_py.html  z_f6c68bdc9becfc1e_tests_py.html  z_f6c68bdc9becfc1e_urls_py.html  z_f6c68bdc9becfc1e_views_py.html  z_f978324627c06562___init___py.html  z_f978324627c06562_admin_py.html  z_f978324627c06562_apps_py.html  z_f978324627c06562_models_py.html  z_f978324627c06562_paginators_py.html  z_f978324627c06562_serializers_py.html  z_f978324627c06562_tests_py.html  z_f978324627c06562_urls_py.html  z_f978324627c06562_views_py.html  (+1 more)
(+26 files in other folders)
