[tool.poetry]
name = "lms-system"
version = "0.1.0"
description = ""
authors = ["Tamir Mandreev <tamirmandreev@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2"
djangorestframework = "^3.16.0"
psycopg2-binary = "^2.9.10"
pillow = "^11.1.0"
python-dotenv = "^1.1.0"
django-filter = "^25.1"
djangorestframework-simplejwt = "^5.5.0"
coverage = "^7.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
